--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -11,6 +11,7 @@
 p {
   background-color: green;
   color: white;
+  font-size: 18px;
 }
 
 </style>
@@ -24,7 +25,7 @@ p {
 
     <p >I would like to be styled with the internal method, please.</p>
 
-    <button style="background-color: orange;color: black;">Inline Method</button>
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
   </body>
 
